# ROS-Mini-Project

./: CMakeLists.txt  README.md  examscript.sh
Map/: my_map.pgm
examtask/: package.xml
examtask/Map/: my_map.yaml
examtask/config/: simple_diff_drive.yaml  twist_mux.yaml
examtask/rviz/: examtask.rviz
examtask/scripts/: Yellowobject.py
examtask/urdf/: examtask.urdf  examtask.urdf.xacro
launch/: examtask_launch.py
