<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>examtask</name>
  <version>0.0.1</version>
  <description>This ROS package is done for the exam task of mobile robotics.</description>
  <maintainer email="deepakmadhu998@gmail.com">Deepak Madhu</maintainer>
  <license>IIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>
